[package]
name = "rustcmd"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-task = "1.2"
base64 = "0.13.0"
bitflags = "1.2.1"
chrono = "0.4.19"
clap = {version = "3.1.3", features = ["cargo"]}
clipboard = "0.5.0"
euclid = "0.22.2"
filedescriptor = "0.8.2"
freetype = "0.7.0"
glium = {version = "0.31.0", default-features = false}
harfbuzz-sys = "0.5.0"
image = "0.24.1"
lazy_static = "1.4.0"
libc = "0.2.91"
line_drawing = "1.0.0"
num = "0.4.0"
num-derive = {version = "0.3.3", features = ["full-syntax"]}
num-traits = "0.2.14"
open = "2.1.0"
palette = "0.6.0"
ratelimit_meter = "5.0.0"
regex = "1.4.4"
resize = "0.7.2"
rgb = "0.8.25"
serde = {version = "1.0.125", features = ["rc"]}
serde_derive = "1.0.125"
serde_json = "1.0.64"
smallvec = "1.6.1"
sysinfo = "0.23.5"
thiserror = "1.0"
unicode-segmentation = "1.7.1"
unicode-width = "0.1.8"
vtparse = "0.1.0"
xi-unicode = "0.3.0"
zstd = "0.10.0"